# nativehelper-prefab

./: README.md  build.gradle  settings.gradle
nativehelper/: build.gradle
nativehelper/src/main/: AndroidManifest.xml
nativehelper/src/main/cpp/: CMakeLists.txt  dummy.cpp
nativehelper/src/main/cpp/include/platform/bionic/: macros.h
nativehelper/src/main/cpp/include/private/: KernelArgumentBlock.h
